Try to prevent scrollbars
Former-commit-id: 6edfd4fa7e0130f5fc36742bda508ea34a9fd177
Former-commit-id: 725040b6e525a6891996b0fc0cc75c80841b418a

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html {
     font-family: sans-serif;
+    height: 100%;
+    overflow: hidden;
 }
 
 #gameCanvas {
@@ -44,10 +51,6 @@ body {
     justify-content: center;
     align-items: center;
     height: 100%;
-}
-
-html {
-    height: 96%;
 }
 
 noscript {
